--- a/J4-mongo/projet_shop/views/products.pug
+++ b/J4-mongo/projet_shop/views/products.pug
@@ -10,3 +10,4 @@ block content
   section.products-list
     each product in products
       +productCard(product)
+        a.button(href=`/basket/add/${product._id}`) Ajout au panier
