--- a/J4-mongo/projet_shop/views/home.pug
+++ b/J4-mongo/projet_shop/views/home.pug
@@ -11,3 +11,4 @@ block content
   section.products-list
     each product in products
       +productCard(product)
+        a.button(href=`/basket/add/${product._id}`) Ajout au panier
